--- a/roles/cloud-digitalocean/tasks/main.yml
+++ b/roles/cloud-digitalocean/tasks/main.yml
@@ -51,7 +51,7 @@
     do_access_token: "{{ do_access_token }}"
     do_droplet_id: "{{ do.droplet.id }}"
     cloud_provider: digitalocean
-    ipv6_support: yes
+    ipv6_support: true
 
 - set_fact:
     cloud_instance_ip: "{{ do.droplet.ip_address }}"
