--- a/roles/dns_adblocking/tasks/freebsd.yml
+++ b/roles/dns_adblocking/tasks/freebsd.yml
@@ -1,4 +1,4 @@
 ---
 
-- name: FreeBSD | Enable dnsmasq
+- name: FreeBSD / HardenedBSD | Enable dnsmasq
   lineinfile: dest=/etc/rc.conf regexp=^dnsmasq_enable= line='dnsmasq_enable="YES"'
