--- a/playbooks/freebsd.yml
+++ b/playbooks/freebsd.yml
@@ -1,9 +1,9 @@
 ---
 
-- name: FreeBSD | Install prerequisites
-  raw: sleep 10 && sudo pkg install -y python27
+- name: FreeBSD / HardenedBSD | Install prerequisites
+  raw: sleep 10 && env ASSUME_ALWAYS_YES=YES sudo pkg install -y python27
 
-- name: FreeBSD | Configure defaults
+- name: FreeBSD / HardenedBSD | Configure defaults
   raw: sudo ln -sf /usr/local/bin/python2.7 /usr/bin/python2.7
 
 - include: facts/FreeBSD.yml
