EC2 dynamic enventory. Fixes #73

--- a/config.cfg
+++ b/config.cfg
@@ -58,3 +58,10 @@ SSH_keys:
   comment: algo@ssh
   private: configs/algo.pem
   public: configs/algo.pem.pub
+
+dynamic_inventory_groups:
+  - azure
+  - digitalocean
+  - ec2
+  - gce
+  - local
