--- a/roles/cloud-azure/tasks/main.yml
+++ b/roles/cloud-azure/tasks/main.yml
@@ -77,3 +77,17 @@
 
 - set_fact:
     cloud_instance_ip: "{{ ip_address }}"
+
+- name: Ensure the group azure exists in the dynamic inventory file
+  lineinfile:
+    state: present
+    dest: configs/inventory.dynamic
+    line: '[azure]'
+
+- name: Populate the dynamic inventory
+  lineinfile:
+    state: present
+    dest: configs/inventory.dynamic
+    insertafter: '\[azure\]'
+    regexp: "^{{ cloud_instance_ip }}.*"
+    line: "{{ cloud_instance_ip }}"
