EC2 instance_initiated_shutdown_behavior to terminate. Close #124

--- a/roles/cloud-ec2/tasks/main.yml
+++ b/roles/cloud-ec2/tasks/main.yml
@@ -101,6 +101,7 @@
     count_tag:
       name: "{{ aws_server_name }}"
     assign_public_ip: yes
+    instance_initiated_shutdown_behavior: terminate
   register: ec2
 
 - name: Add new instance to host group
