--- a/playbooks/local_ssh.yml
+++ b/playbooks/local_ssh.yml
@@ -14,7 +14,8 @@
     mode: '0600'
 
 - name: Configure the local ssh config
-  blockinfile:
+  local_action:
+    module: blockinfile
     dest: "~/.ssh/config"
     marker: "# {mark} ALGO MANAGED BLOCK {{ cloud_instance_ip|default(server_ip) }}"
     insertbefore: BOF
