--- a/config.cfg
+++ b/config.cfg
@@ -1,6 +1,7 @@
 ---
 
-# Add as many users as you want for your VPN server here
+# Add as many users as you want for your VPN server here.
+# Access credentials will be generated for each one.
 users:
   - dan
   - jack
