--- a/roles/client/tasks/main.yml
+++ b/roles/client/tasks/main.yml
@@ -4,7 +4,7 @@
 - name: Include system based facts and tasks
   include: systems/main.yml
 
-- name: Cheking the signature algorithm
+- name: Checking the signature algorithm
   local_action: >
       shell openssl x509 -text -in certs/{{ IP_subject_alt_name }}.crt  | grep 'Signature Algorithm' | head -n1
   become: no
