--- a/roles/common/tasks/ubuntu.yml
+++ b/roles/common/tasks/ubuntu.yml
@@ -83,8 +83,11 @@
       - cgroup-tools
       - openssl
     sysctl:
-      - net.ipv4.ip_forward
-      - net.ipv4.conf.all.forwarding
-      - net.ipv6.conf.all.forwarding
+      - item: net.ipv4.ip_forward
+        value: 1
+      - item: net.ipv4.conf.all.forwarding
+        value: 1
+      - item: net.ipv6.conf.all.forwarding
+        value: 1
   tags:
     - always
