--- a/roles/common/tasks/freebsd.yml
+++ b/roles/common/tasks/freebsd.yml
@@ -10,8 +10,10 @@
       - bash
       - wget
     sysctl:
-      - net.inet.ip.forwarding
-      - net.inet6.ip6.forwarding
+      - item: net.inet.ip.forwarding
+        value: 1
+      - item: net.inet6.ip6.forwarding
+        value: 1
   tags:
     - always
 
