Add a comment about escaping usernames

--- a/config.cfg
+++ b/config.cfg
@@ -2,6 +2,7 @@
 
 # Add as many users as you want for your VPN server here.
 # Access credentials will be generated for each one.
+# Don't forget to escape nicknames with quotes, if you are using zero in nicknames.
 users:
   - dan
   - jack
