--- a/config.cfg
+++ b/config.cfg
@@ -1,15 +1,12 @@
 ---
 
 # Add as many users as you want for your VPN server here.
-# Access credentials will be generated for each one.
-# Don't forget to escape nicknames with quotes, if you are using zero in nicknames.
+# Credentials will be generated for each one.
 users:
   - dan
   - jack
 
-# Add an email address to send logs if you're using auditd for monitoring.
-# Avoid using '+' in your email address otherwise auditd will fail to start.
-auditd_action_mail_acct: email@example.com
+# NOTE: If your usernames have leading 0's, like "000dan", you have to escape them
 
 ### Advanced users only below this line ###
 
