some name fixes

--- a/roles/vpn/defaults/main.yml
+++ b/roles/vpn/defaults/main.yml
@@ -24,6 +24,6 @@ ciphers:
   defaults:
     ike: aes128gcm16-sha2_512-prfsha512-ecp256!
     esp: aes128gcm16-sha2_512-ecp256!
-  windows:
-    ike: aes128gcm16-sha2_512-prfsha512-ecp256,aes128-sha2_256-prfsha256-modp2048!
-    esp: aes128gcm16-sha2_512-ecp256,aes128-sha2_256-modp2048!
+  compat:
+    ike: aes128-sha2_512-prfsha512-ecp256,aes128gcm16-sha2_512-prfsha512-ecp256,aes128-sha2_256-prfsha256-modp2048!
+    esp: aes128-sha2_512-ecp256,aes128gcm16-sha2_512-ecp256,aes128-sha2_256-modp2048!
