Make instance sizes more flexible to edit #355

--- a/playbooks/local.yml
+++ b/playbooks/local.yml
@@ -19,6 +19,6 @@
     create: yes
     block: |
       [algo:children]
-      {% for group in dynamic_inventory_groups %}
+      {% for group in cloud_providers.keys() %}
       {{ group }}
       {% endfor %}
