--- a/roles/cloud-digitalocean/tasks/main.yml
+++ b/roles/cloud-digitalocean/tasks/main.yml
@@ -45,7 +45,7 @@
     command: droplet
     name: "{{ do_server_name }}"
     region_id: "{{ do_region }}"
-    size_id: "512mb"
+    size_id: "{{ cloud_providers.digitalocean.size }}"
     image_id: "ubuntu-16-04-x64"
     ssh_key_ids: "{{ do_ssh_key.ssh_key.id }}"
     unique_name: yes
