Python False-y values should be accepted. #417 (#426)

--- a/roles/cloud-azure/tasks/main.yml
+++ b/roles/cloud-azure/tasks/main.yml
@@ -2,13 +2,17 @@
 
 - set_fact:
     resource_group: "Algo_{{ region }}"
+    secret: "{{ azure_secret | default(lookup('env','AZURE_SECRET'), true) }}"
+    tenant: "{{ azure_tenant | default(lookup('env','AZURE_TENANT'), true) }}"
+    client_id: "{{ azure_client_id | default(lookup('env','AZURE_CLIENT_ID'), true) }}"
+    subscription_id: "{{ azure_subscription_id | default(lookup('env','AZURE_SUBSCRIPTION_ID'), true) }}"
 
 - name: Create a resource group
   azure_rm_resourcegroup:
-    secret: "{{ azure_secret | default(lookup('env','AZURE_SECRET')) }}"
-    tenant: "{{ azure_tenant | default(lookup('env','AZURE_TENANT')) }}"
-    client_id: "{{ azure_client_id | default(lookup('env','AZURE_CLIENT_ID')) }}"
-    subscription_id: "{{ azure_subscription_id | default(lookup('env','AZURE_SUBSCRIPTION_ID')) }}"
+    secret: "{{ secret }}"
+    tenant: "{{ tenant }}"
+    client_id: "{{ client_id }}"
+    subscription_id: "{{ subscription_id }}"
     name: "{{ resource_group }}"
     location: "{{ region }}"
     tags:
@@ -16,10 +20,10 @@
 
 - name: Create a virtual network
   azure_rm_virtualnetwork:
-    secret: "{{ azure_secret | default(lookup('env','AZURE_SECRET')) }}"
-    tenant: "{{ azure_tenant | default(lookup('env','AZURE_TENANT')) }}"
-    client_id: "{{ azure_client_id | default(lookup('env','AZURE_CLIENT_ID')) }}"
-    subscription_id: "{{ azure_subscription_id | default(lookup('env','AZURE_SUBSCRIPTION_ID')) }}"
+    secret: "{{ secret }}"
+    tenant: "{{ tenant }}"
+    client_id: "{{ client_id }}"
+    subscription_id: "{{ subscription_id }}"
     resource_group: "{{ resource_group }}"
     name: algo_net
     address_prefixes: "10.10.0.0/16"
@@ -28,10 +32,10 @@
 
 - name: Create a security group
   azure_rm_securitygroup:
-    secret: "{{ azure_secret | default(lookup('env','AZURE_SECRET')) }}"
-    tenant: "{{ azure_tenant | default(lookup('env','AZURE_TENANT')) }}"
-    client_id: "{{ azure_client_id | default(lookup('env','AZURE_CLIENT_ID')) }}"
-    subscription_id: "{{ azure_subscription_id | default(lookup('env','AZURE_SUBSCRIPTION_ID')) }}"
+    secret: "{{ secret }}"
+    tenant: "{{ tenant }}"
+    client_id: "{{ client_id }}"
+    subscription_id: "{{ subscription_id }}"
     resource_group: "{{ resource_group }}"
     name: AlgoSecGroup
     purge_rules: yes
@@ -57,10 +61,10 @@
 
 - name: Create a subnet
   azure_rm_subnet:
-    secret: "{{ azure_secret | default(lookup('env','AZURE_SECRET')) }}"
-    tenant: "{{ azure_tenant | default(lookup('env','AZURE_TENANT')) }}"
-    client_id: "{{ azure_client_id | default(lookup('env','AZURE_CLIENT_ID')) }}"
-    subscription_id: "{{ azure_subscription_id | default(lookup('env','AZURE_SUBSCRIPTION_ID')) }}"
+    secret: "{{ secret }}"
+    tenant: "{{ tenant }}"
+    client_id: "{{ client_id }}"
+    subscription_id: "{{ subscription_id }}"
     resource_group: "{{ resource_group }}"
     name: algo_subnet
     address_prefix: "10.10.0.0/24"
@@ -71,10 +75,10 @@
 
 - name: Create an instance
   azure_rm_virtualmachine:
-    secret: "{{ azure_secret | default(lookup('env','AZURE_SECRET')) }}"
-    tenant: "{{ azure_tenant | default(lookup('env','AZURE_TENANT')) }}"
-    client_id: "{{ azure_client_id | default(lookup('env','AZURE_CLIENT_ID')) }}"
-    subscription_id: "{{ azure_subscription_id | default(lookup('env','AZURE_SUBSCRIPTION_ID')) }}"
+    secret: "{{ secret }}"
+    tenant: "{{ tenant }}"
+    client_id: "{{ client_id }}"
+    subscription_id: "{{ subscription_id }}"
     resource_group: "{{ resource_group }}"
     admin_username: ubuntu
     virtual_network: algo_net
@@ -100,10 +104,10 @@
 
 - name: Ensure the network interface includes all required parameters
   azure_rm_networkinterface:
-    secret: "{{ azure_secret | default(lookup('env','AZURE_SECRET')) }}"
-    tenant: "{{ azure_tenant | default(lookup('env','AZURE_TENANT')) }}"
-    client_id: "{{ azure_client_id | default(lookup('env','AZURE_CLIENT_ID')) }}"
-    subscription_id: "{{ azure_subscription_id | default(lookup('env','AZURE_SUBSCRIPTION_ID')) }}"
+    secret: "{{ secret }}"
+    tenant: "{{ tenant }}"
+    client_id: "{{ client_id }}"
+    subscription_id: "{{ subscription_id }}"
     name: "{{ networkinterface_name }}"
     resource_group: "{{ resource_group }}"
     virtual_network_name: algo_net
