remove the proxy role #440

--- a/config.cfg
+++ b/config.cfg
@@ -28,7 +28,7 @@ dns_servers:
     - 2001:4860:4860::8888
     - 2001:4860:4860::8844
 
-# IP address for the proxy and the local dns resolver
+# IP address for the local dns resolver
 local_service_ip: 172.16.0.1
 
 pkcs12_PayloadCertificateUUID: "{{ 900000 | random | to_uuid | upper }}"
@@ -45,7 +45,7 @@ congrats:
     "#    Config files and certificates are in the ./configs/ directory.    #"
     "#              Go to https://whoer.net/ after connecting               #"
     "#        and ensure that all your traffic passes through the VPN.      #"
-    "#          Local DNS resolver and Proxy IP address: {{ local_service_ip }}         #"
+    "#               Local DNS resolver {{ local_service_ip }}              #"
   p12_pass: |
     "#                The p12 and SSH keys password is {{ easyrsa_p12_export_password }}             #"
   ca_key_pass: |
