--- a/config.cfg
+++ b/config.cfg
@@ -61,10 +61,20 @@ SSH_keys:
 cloud_providers:
   azure:
     size: Basic_A0
+    image:
+      offer: UbuntuServer
+      publisher: Canonical
+      sku: '16.04-LTS' # 16.04-LTS
+      version: latest
   digitalocean:
     size: 512mb
+    image: "ubuntu-16-04-x64" # ubuntu-16-04-x64 / ubuntu-17-04-x64
   ec2:
     size: t2.micro
+    image:
+      name: "ubuntu-zesty-17.04" # ubuntu-xenial-16.04 / ubuntu-zesty-17.04
+      owner: "099720109477"
   gce:
     size: f1-micro
+    image: ubuntu-1604 # ubuntu-1604 / ubuntu-1704
   local:
