Move back to 16.04. Forgot to change after testing

--- a/config.cfg
+++ b/config.cfg
@@ -72,7 +72,7 @@ cloud_providers:
   ec2:
     size: t2.micro
     image:
-      name: "ubuntu-zesty-17.04" # ubuntu-xenial-16.04 / ubuntu-zesty-17.04
+      name: "ubuntu-xenial-16.04" # ubuntu-xenial-16.04 / ubuntu-zesty-17.04
       owner: "099720109477"
   gce:
     size: f1-micro
