--- a/roles/vpn/tasks/ubuntu.yml
+++ b/roles/vpn/tasks/ubuntu.yml
@@ -3,6 +3,9 @@
 - set_fact:
     strongswan_additional_plugins: []
 
+- include: ubuntu-hacks.yml
+  when: ansible_distribution_version == "16.04"
+
 - name: Ubuntu | Install strongSwan
   apt: name=strongswan state=latest update_cache=yes install_recommends=yes
 
