--- a/config.cfg
+++ b/config.cfg
@@ -41,8 +41,8 @@ BetweenClients_DROP: Y
 # ALPHA feature: Uncomment below to build EdgeMaxclient configuration. Note that this will break connectivity from other clients
 # We recommend that you deploy a sepearate Algo server for each Edgerouter with only one client user defined.
 # Set the lan subnet to the IP CIDR notation for the lan behind the router. This MUST not interest with the vpn_network set above
-edgemax_support: True
-edgemax_lan_subnet: 10.0.0.0/16
+#edgemax_support: True
+#edgemax_lan_subnet: 10.0.0.0/16
 
 congrats:
   common: |
